@@ -6,7 +6,7 @@ LruHash class, a Hash with a max size, controlled by a LRU mechanism
 
 == getting it
 
-    sudo gem install rufus-lru
+  gem install rufus-lru
 
 or at
 
@@ -20,18 +20,18 @@ It's a regular hash, but you have to set a maxsize at instantiation.
 Once the maxsize is reached, the hash will discard the element that was the
 least recently used (hence LRU).
 
-    require 'rubygems'
-    require 'rufus/lru'
+  require 'rubygems'
+  require 'rufus/lru'
 
-    h = LruHash.new 3
+  h = LruHash.new 3
 
-    5.times { |i| h[i] = "a" * i }
+  5.times { |i| h[i] = "a" * i }
 
-    puts h.inspect # >> {2=>"aa", 3=>"aaa", 4=>"aaaa"}
+  puts h.inspect # >> {2=>"aa", 3=>"aaa", 4=>"aaaa"}
 
-    h[:newer] = "b"
+  h[:newer] = "b"
 
-    puts h.inspect # >> {:newer=>"b", 3=>"aaa", 4=>"aaaa"}
+  puts h.inspect # >> {:newer=>"b", 3=>"aaa", 4=>"aaaa"}
 
 
 == dependencies
@@ -48,7 +48,7 @@ On the rufus-ruby list[http://groups.google.com/group/rufus-ruby] :
 
 == issue tracker
 
-http://rubyforge.org/tracker/?atid=18584&group_id=4812&func=browse
+http://github.com/jmettraux/rufus-lru/issues
 
 
 == irc
